# hf-tle92466ed

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .markdownlint.json  .yamllint  404.html  CMakeLists.txt  CMakeLists_Cpp11.txt  CONTRIBUTING.md  Doxyfile  Doxyfile.in  IMPLEMENTATION_SUMMARY.md  NOEXCEPT_VERIFICATION.md  PROJECT_COMPLETION.txt  README.md  index.html  index.md  version_selector.html
.github/: dependabot.yml
.github/workflows/: README.md  ci-cpp-analysis.yml  ci-cpp-lint.yml  ci-docs-linkcheck.yml  ci-yaml-lint.yml  esp32-examples-build-ci.yml  publish-docs.yml  release-ci.yml  yamllint.yml
_config/: .markdownlint.json  404.html  Doxyfile  _config.yml  lychee.toml
_config/_data/: features.yml
_config/_includes/: alert.html  api_card.html  badge.html  card.html  code_block.html  feature_list.html  footer_custom.html  head_custom.html  nav_footer_custom.html  search_placeholder_custom.html  toc.html  toc_heading_custom.html  version_info.html  version_selector.html  workflow_status.html
_config/_layouts/: minimal.html  print.html  workflow.html
_config/doxygen-extensions/: README.md  extensions.md  index.md
development/: 404.html  README.md  feed.xml  index.html  robots.txt  sitemap.xml  version_info.json
development/CONTRIBUTING/: index.html
development/api/: Arduino__HAL_8cpp.html  Arduino__HAL_8cpp__incl.map  Arduino__HAL_8cpp__incl.md5  Arduino__HAL_8hpp.html  Arduino__HAL_8hpp.js  Arduino__HAL_8hpp_source.html  BasicUsageExample_8cpp__incl.map  BasicUsageExample_8cpp__incl.md5  DriverIntegrationTest_8cpp.html  ESP32C6__HAL_8cpp.html  ESP32C6__HAL_8cpp__incl.map  ESP32C6__HAL_8hpp__incl.map  Esp32TleCommInterface_8cpp.html  Esp32TleCommInterface_8cpp__incl.map  Esp32TleCommInterface_8hpp.html  Esp32TleCommInterface_8hpp__dep__incl.map  Esp32TleCommInterface_8hpp__incl.md5  Esp32TleCommInterface_8hpp_source.html  README_8md.html  SolenoidControlTest_8cpp.html  TLE92466ED_8cpp.html  TLE92466ED_8cpp.js  TLE92466ED_8cpp__incl.map  TLE92466ED_8cpp__incl.md5  TLE92466ED_8hpp.html  TLE92466ED_8hpp__dep__incl.md5  TLE92466ED_8hpp_source.html  TLE92466ED__Config_8hpp__dep__incl.md5  TLE92466ED__HAL_8hpp_source.html  TLE92466ED__Registers_8hpp.html  TLE92466ED__Registers_8hpp__dep__incl.md5  TLE92466ED__TestConfig_8hpp.js  TLE92466ED__TestConfig_8hpp__incl.map  TLE92466ED__TestConfig_8hpp_source.html  TLE92466ED__TestFramework_8hpp_source.html  TestFramework_8h.js  TestFramework_8h__dep__incl.md5  TestFramework_8h__incl.md5  annotated.html  annotated_dup.js  (+128 more)
development/docs/: api_reference.html  configuration.html  examples.html  examples.md  hardware_setup.html  hardware_setup.md  index.html  index.md  installation.html  platform_integration.html  platform_integration.md  quickstart.html  quickstart.md  troubleshooting.html
development/examples/esp32/main/: BasicUsageExample.cpp  CMakeLists.txt  DriverIntegrationTest.cpp  ESP32C6_HAL.hpp  Esp32TleCommInterface.cpp  Esp32TleCommInterface.hpp  SolenoidControlTest.cpp  TestFramework.h  driver_integration_test.cpp  esp32_tle_comm_interface.hpp  tle92466ed_test_config.hpp
development/inc/: TLE92466ED.hpp  TLE92466ED_CommInterface.hpp  TLE92466ED_Registers.hpp
docs/: 00_INDEX.md  01_IC_Overview.md  02_SPI_Protocol.md  03_Register_Map.md  04_Current_Control.md  05_Channel_Modes.md  06_Diagnostics.md  07_Driver_API.md  08_HAL_Implementation.md  09_Usage_Examples.md  Getting_Started.md  IC_Overview.md  README.md  Register_Map.md  api_reference.md  configuration.md  examples.md  hardware_setup.md  index.md  installation.md  platform_integration.md  quickstart.md  troubleshooting.md
doxs/: versions.json
doxs/development/: Arduino__HAL_8hpp__incl.map  Arduino__HAL_8hpp__incl.md5  BasicUsageExample_8cpp.html  BasicUsageExample_8cpp.js  BasicUsageExample_8cpp__incl.md5  DriverIntegrationTest_8cpp.js  DriverIntegrationTest_8cpp__incl.map  ESP32C6__HAL_8hpp_source.html  Esp32TleCommInterface_8cpp__incl.map  Esp32TleCommInterface_8cpp__incl.md5  Esp32TleCommInterface_8hpp.html  Esp32TleCommInterface_8hpp.js  Esp32TleCommInterface_8hpp__dep__incl.md5  MultiChannelExample_8cpp.js  MultiChannelExample_8cpp__incl.md5  TLE92466ED_8cpp.html  TLE92466ED_8cpp__incl.map  TLE92466ED_8cpp__incl.md5  TLE92466ED_8hpp.html  TLE92466ED_8hpp__incl.map  TLE92466ED__HAL_8hpp.html  TLE92466ED__HAL_8hpp__incl.map  TLE92466ED__Registers_8hpp__incl.md5  TLE92466ED__Registers_8hpp_source.html  TLE92466ED__TestConfig_8hpp.html  TLE92466ED__TestConfig_8hpp__incl.md5  TLE92466ED__TestConfig_8hpp_source.html  TLE92466ED__TestFramework_8hpp.html  TLE92466ED__TestFramework_8hpp__dep__incl.md5  TLE92466ED__TestFramework_8hpp__incl.map  TLE92466ED__TestFramework_8hpp_source.html  TestFramework_8h__dep__incl.map  TestFramework_8h__incl.map  TestFramework_8h_source.html  annotated_dup.js  basic__usage_8cpp__incl.md5  classArduino__HAL.html  classArduino__HAL__coll__graph.md5  classESP32C6__HAL.html  classESP32C6__HAL.js  (+105 more)
doxs/preview/: Arduino__HAL_8cpp__incl.md5  Arduino__HAL_8hpp.html  ESP32C6__HAL_8hpp.html  ESP32C6__HAL_8hpp.js  (+66 more)
examples/: basic_usage.cpp  basic_usage_cpp11.cpp  example_hal.hpp  example_hal_cpp11.hpp
examples/esp32/components/tle92466ed-espidf/: CMakeLists.txt  README.md  idf_component.yml
examples/esp32/main/: BasicUsageExample.cpp  CMakeLists.txt  DriverIntegrationTest.cpp  ESP32C6_HAL.cpp  ESP32C6_HAL.hpp  Esp32TleCommInterface.cpp  Esp32TleCommInterface.hpp  MultiChannelExample.cpp  SolenoidControlTest.cpp  TLE92466ED_Config.hpp  TLE92466ED_TestConfig.hpp  TLE92466ED_TestFramework.hpp  esp32_tle_comm_interface.cpp  solenoid_control_test.cpp
inc/: TLE92466ED.hpp  TLE92466ED_CommInterface.hpp  TLE92466ED_Registers.hpp  tle92466ed.hpp  tle92466ed_registers.hpp  tle92466ed_spi_interface.hpp
include/: TLE92466ED.hpp  TLE92466ED_Compat.hpp  TLE92466ED_Cpp11.hpp  TLE92466ED_HAL.hpp  TLE92466ED_HAL_Cpp11.hpp  TLE92466ED_Registers.hpp  TLE92466ED_Registers_Cpp11.hpp
preview/: feed.xml  index.html  robots.txt  sitemap.xml  version_info.json
src/: TLE92466ED.cpp  TLE92466ED_Cpp11.cpp  tle92466ed.cpp
(+983 files in other folders)
